2004-10-13  Philippe Gerum  <rpm@xenomai.org>

	* scripts/rtai-load.in: Allow for passing args to commands.
	e.g. ./run [target spec] -- arglist

2004-10-11  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_suspend_thread): Convert any pending
	XNKICKED state into the XNBREAK condition when attempting to
	suspend a runnable shadow thread which has received a Linux
	signal.

2004-10-10  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.6

2004-10-10  Philippe Gerum  <rpm@xenomai.org>

	* GNUMakefile.am: Fix distclean-local for old fashioned build.

2004-10-09  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* GNUmakefiles.am building kernel modules : Force build of kernel
	and let Kbuild handle dependencies.

2004-10-09  Ivan Raikov <raikov@cc.gatech.edu>

	* scripts/rtai-load.in: Add support for user-defined module search
	directory.

2004-10-09  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.*-i386-r8c4 and
	2.6.8rc1-ppc-r6c8.

	* nucleus/shadow.c (engage_irq_shield, disengage_irq_shield):
	Improve concurrency while testing the shielded/unshieded state
	bits.

	* include/nucleus/asm-*/system.h (xnarch_grab_xirqs,
	xnarch_lock_xirqs, xnarch_unlock_xirqs): Move the arch-dependent
	shield code to where it belongs.

2004-10-08  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c: Yet another IRQ shield implementation.

2004-10-07  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (xnshadow_substitute_syscall): Make sure we
	will attempt to restart the nanosleep() substitute if interrupted
	by a signal.

	* nucleus/fusion.c (__pthread_sleep_rt): Return -EINTR upon
	interrupt.

	* nucleus/pod.c (xnpod_add_hook, xnpod_remove_hook): Fix an
	obscure SMP race that occurred when using job control on
	testsuite/latency.

	* nucleus/shadow.c (xnshadow_linux_sysentry): Reread the current
	Xenomai thread pointer for calling request_syscall_restart();
	it might have been NULL on entry then only set during the just