@@ -100,25 +100,17 @@ static inline spl_t __xnlock_get_irqsave (xnlock_t *lock)
 
 {
     adeos_declare_cpuid;
-    spl_t flags;
+    unsigned long flags;
 
     rthal_local_irq_save(flags);
 
     adeos_load_cpuid();
 
     if (!test_and_set_bit(cpuid,lock))
+	{
 	while (test_and_set_bit(BITS_PER_LONG - 1,lock))
-	    {
-            if (!flags)
-                {
-                clear_bit(cpuid, lock);
-                rthal_sync_irqs();
-                adeos_load_cpuid(); /* Could have been migrated by interrupts. */
-                set_bit(cpuid, lock);
-                }
-            else
-                rthal_cpu_relax(cpuid);
-            }
+	    rthal_cpu_relax(cpuid);
+	}
     else
         flags |= 2;
 
