@@ -1,3 +1,14 @@
+2004-10-16  Philippe Gerum  <rpm@xenomai.org>
+
+	* include/nucleus/asm-*/system.h (__xnlock_get_irqsave): Get
+	rid of the optimization allowing to spin interrupts on. The basic
+	idea is correct, but the implementation was bugous
+	Adeos-wise. Revert to a conservative implementation until SMP
+	support is deemed stable in all other aspects.
+	
+	* nucleus/pod.c (xnpod_suspend_thread): Clear other unblocking
+	condition bits when forcing XNBREAK upon signal.
+
 2004-10-13  Philippe Gerum  <rpm@xenomai.org>
 
 	* scripts/rtai-load.in: Allow for passing args to commands.
